--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Hello I am<br><span>  Podugu Padma Teja </span></h1>
         <h2>I am a <span>frontend developer....</span></h2>
         <p>
-            Aspiring Software Developer
+    
             As an aspiring software developer, I bring a solid foundation in programming languages such as Python and C, 
             combined with expertise in front-end technologies like HTML, CSS, and JavaScript. Proficient in modern frameworks like Bootstrap and React.js, as well as SQL for database management,
             I'm passionate about creating innovative and efficient solutions. Let's build something extraordinary together!</p>
@@ -84,10 +84,8 @@
       <div class="about_section">
            <h1>About<span>Me</span></h1>
            <h2>frontend<span>developer</span></h2>
-           <p>I am a dedicated and enthusiastic fresher with a Bachelor of Technology in Computer Science and Engineering from Avanthi Institute of Engineering and Technology, graduating with a CGPA of 8.0. My passion lies in programming, web development, and leveraging my skills to solve real-world problems.
-            I have experience in various programming and web development languages, including C, Python, HTML, CSS, JavaScript, React.js, and Bootstrap. My computer skills extend to Microsoft Excel, Word, PowerPoint, and basic computer operations.
-            In addition to my technical abilities, I possess strong soft skills such as team collaboration, creative thinking, communication, problem-solving, and time management. I believe these skills are crucial for working effectively in a team environment and tackling complex challenges.
-
+           <p>I am a recent graduate from Avanthi Institute of Engineering and Technology with a degree in Computer Science, eagerly seeking opportunities in the software field. I have strong front-end skills in HTML, CSS, JavaScript, Python, React.js, and Bootstrap, as well as proficiency in back-end technologies like C, Python, and SQL. 
+            I aim to leverage my expertise in front-end development to create user-friendly and efficient application
         </p>
             <button class="about_btn">Read more....</button>
        </div>
