--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             });
         
             document.getElementById('linkedin-icon').addEventListener('click', function() {
-                document.getElementById('contact-info').innerText = 'LinkedIn:https://www.linkedin.com/in/podugu-padma-teja-2284872b7';
+                document.getElementById('contact-info').innerText = 'linkedin.com/in/padma-teja-podugu-958476348';
             });
         
             document.getElementById('whatsapp-icon').addEventListener('click', function() {
@@ -142,6 +142,13 @@
                 <h2>Design and Development of Powerbill prediction using AI & ML</h2>
                 <p>Developed an innovative solution to predict power bills using cutting-edge artificial intelligence and machine learning techniques. The project involved designing and implementing a predictive model that accurately forecasts energy consumption and costs.
                    Leveraged extensive data analysis and feature engineering to enhance model accuracy, providing users with valuable insights for better energy management and cost savings.</p>
+                <a href="#">Read more...</a>
+            </div>
+
+          <div class="project_card">
+                <i class="fas fa-computer"></i>
+                <h2>E-commerce Website Using React.js</h2>
+                <p>Developed a fully functional e-commerce website with features like product listings and a shopping cart. Integrated React Router for seamless navigation and connected APIs for real-time product data.Optimized website performance and ensured mobile responsiveness, reducing load time.</p>
                 <a href="#">Read more...</a>
             </div>
 
