--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <div class="project_card">
                 <i class="fas fa-computer"></i>
                 <h2>Youth motivation </h2>
-                <p>nitiated and developed an online community project aimed at inspiring and empowering young individuals. The platform features motivational content, success stories, and interactive sessions with mentors to foster a supportive environment for personal growth. 
+                <p>Initiated and developed an online community project aimed at inspiring and empowering young individuals. The platform features motivational content, success stories, and interactive sessions with mentors to foster a supportive environment for personal growth. 
                 Utilizing modern web technologies, the project is designed to be engaging and accessible, encouraging youth to pursue their dreams and overcome challenges. My role involved conceptualizing the project, designing the user interface, and implementing the features to create an impactful and meaningful experience for users.</p>
                 <a href="#">Read more...</a>
             </div>
