--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             });
         
             document.getElementById('instagram-icon').addEventListener('click', function() {
-                document.getElementById('contact-info').innerText = 'Instagram: me_tej_rocks_';
+                document.getElementById('contact-info').innerText = 'Instagram: _mr._teja_03_';
             });
         
             document.getElementById('facebook-icon').addEventListener('click', function() {
