--- a/index.html
+++ b/index.html
@@ -152,6 +152,17 @@
                 <a href="#">Read more...</a>
             </div>
 
+
+          <div class="project_card">
+                <i class="fas fa-computer"></i>
+                <h2>Responsive Portfolio Website</h2>
+                <p>Technologies: HTML, CSS, JavaScript
+  Developed a personal portfolio website to showcase skills, projects, and achievements using HTML, CSS, and JavaScript.   Implemented a mobile-first, responsive design for optimal viewing on various devices.
+  Ensured cross-browser compatibility for seamless performance across different browsers. Improved website loading speed by 30% for faster performance on mobile devices.
+</p>
+                <a href="#">Read more...</a>
+            </div>
+
             <div class="project_card">
                 <i class="fas fa-computer"></i>
                 <h2>orphans donars page</h2>
