--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@
                 <a href="#">Read more...</a>
             </div>
 
+          <div class="skills_card">
+                <i class="fas fa-laptop"></i>
+                <h2>Tools & Platform </h2>
+                <p> Git, GitHub, VS Code.</p>
+                <a href="#">Read more...</a>
+            </div>
+
             <div class="skills_card">
                 <i class="fas fa-laptop"></i>
                 <h2>Soft skills</h2>
