--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <i class="fas fa-envelope" id="email-icon"></i>
             <i class="fab fa-linkedin" id="linkedin-icon"></i>
             <i class="fab fa-whatsapp" id="whatsapp-icon"></i>
+            <i class="fab fa-github" id="github-icon"></i>
             <i class="fab fa-instagram" id="instagram-icon"></i>
             <i class="fab fa-facebook" id="facebook-icon"></i>
             <i class="fas fa-map-marker-alt" id="location-icon"></i>  
@@ -61,6 +62,10 @@
             document.getElementById('whatsapp-icon').addEventListener('click', function() {
                 document.getElementById('contact-info').innerText = 'WhatsApp: 7013544848';
             });
+
+             document.getElementById('github-icon').addEventListener('click', () => {
+             document.getElementById('contact-info').innerText = 'GitHub: https://github.com/Padmateja3';
+             });
         
             document.getElementById('instagram-icon').addEventListener('click', function() {
                 document.getElementById('contact-info').innerText = 'Instagram: _mr._teja_03_';
@@ -73,7 +78,7 @@
             document.getElementById('location-icon').addEventListener('click', function() {
                 document.getElementById('contact-info').innerText = 'Location: parvathipuram, Andhra Pradesh, India';
             });
-            document.getElementById('download-cv').addEventListener('click', function() { window.location.href = 'https://drive.google.com/file/d/1nTLACqIbYs25tR-FJHWb--_ZdFdX7s_F/view?usp=drivesdk '; });
+            document.getElementById('download-cv').addEventListener('click', function() { window.location.href = 'https://flowcv.com/resume/7foeihj37dm4 '; });
         </script>
         
     </div>
@@ -150,7 +155,7 @@
       <p><strong>Importance:</strong> This project highlights the growing need for data-driven solutions in energy management. By leveraging machine learning, I was able to provide insights that can help consumers manage their electricity usage more effectively, ultimately leading to cost savings and energy conservation.</p>
       <p><strong>Challenges:</strong> Data cleaning and feature selection were crucial for improving model accuracy. I faced challenges in handling missing data and ensuring the model was robust against various consumption patterns.</p>
       <p><strong>Outcome:</strong> Achieved a prediction accuracy of over 90%, demonstrating the effectiveness of machine learning in real-world applications. This project not only enhanced my technical skills but also deepened my understanding of the energy sector.</p>
-      <p><strong>GitHub Repository:</strong> <a href="https://github.com/yourusername/power-bill-prediction" target="_blank">View Project</a></p>
+      <p><strong>GitHub Repository:</strong> <a href="https://github.com/Padmateja3/powerbill-prediction">View Project</a></p>
     </div>
 
     <!-- Project 2 -->
