--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </label>
   </nav>
   <section id="home" class="home">
-    <img src="teja.jpg" alt="" width="450px" height="400px">
+    <img src="nani.jpg" alt="" width="450px" height="400px">
     <div class="description">
         <h1>Hello I am<br><span>  Podugu Padma Teja </span></h1>
         <h2>I am a <span>frontend developer....</span></h2>
@@ -96,7 +96,7 @@
        </div>
 
        <div class="about_photo">
-        <img src="nani.jpg" alt="" width="420px" width="360px">
+        <img src="teja.jpg" alt="" width="420px" width="360px">
        </div>
     </section>
 
