--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
        </div>
 
        <div class="about_photo">
-        <img src="teja.jpg" alt="" width="420px" width="360px">
+        <img src="nani.jpg" alt="" width="420px" width="360px">
        </div>
     </section>
 
