--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
             });
         
             document.getElementById('location-icon').addEventListener('click', function() {
-                document.getElementById('contact-info').innerText = 'Location: Parvathipuram, Andhra Pradesh, India';
+                document.getElementById('contact-info').innerText = 'Location: Hyderabad,India';
             });
-            document.getElementById('download-cv').addEventListener('click', function() { window.location.href = 'https://flowcv.com/resume/7foeihj37dm4 '; });
+            document.getElementById('download-cv').addEventListener('click', function() { window.location.href = 'https://flowcv.com/resume/7foeihj37dm4'; });
         </script>
         
     </div>
@@ -182,4 +182,5 @@
   
 </body>
 </html>
+
 
