--- a/index.html
+++ b/index.html
@@ -93,18 +93,34 @@
 <!-- Experience Section -->
 <section id="experience" class="experience">
   <h1 class="experience_section">My <span>Experience</span></h1>
+
+  <!-- Role Experience -->
   <div class="experience_card">
     <h3>Software Test Engineer</h3>
     <p><strong>BMS Infosolution Pvt. Ltd – Quality Associate Analyst | Hyderabad, India</strong></p>
     <ul>
-      <li>Worked as a Software Test Engineer with hands-on experience in manual and basic automation testing.</li>
-      <li>Involved in requirement analysis, test case design, execution, defect reporting, and preparing test summary reports.</li>
-      <li>Contributed to the <strong>E-Commerce Website (OpenCart Demo)</strong> project, focusing on functional, regression, and integration testing.</li>
-      <li>Practical exposure to SDLC, STLC, Defect Life Cycle, Bug Severity & Priority, and Agile methodologies.</li>
-      <li>Gained experience in Selenium WebDriver with Java, TestNG, WebDriverWait, and Maven for basic automation testing.</li>
+      <li>Worked as a Software Test Engineer with 1 year of experience in manual and basic automation testing.</li>
+      <li>Designed, executed, and maintained test cases based on functional requirements and business workflows.</li>
+      <li>Performed functional, regression, integration, and cross-browser testing.</li>
+      <li>Experienced with SDLC, STLC, Agile methodology, and defect life cycle.</li>
+      <li>Hands-on with Selenium WebDriver, TestNG, WebDriverWait, and Maven for basic automation.</li>
+    </ul>
+  </div>
+
+  <!-- Project Experience -->
+  <div class="experience_card">
+    <h3>Macy’s Checkout Project</h3>
+    <p><strong>Role: Software Test Engineer | Domain: E-commerce | Tools: Selenium, TestNG, Maven</strong></p>
+    <ul>
+      <li>Worked on the <strong>Macy’s Checkout System</strong>, ensuring smooth and secure online purchases.</li>
+      <li>Validated functionalities including login, registration, cart management, payment processing, and order confirmation.</li>
+      <li>Prepared and executed comprehensive manual test cases covering multiple checkout scenarios.</li>
+      <li>Automated key test flows using Selenium WebDriver and TestNG to speed up regression testing.</li>
+      <li>Ensured seamless user experience by detecting and reporting bugs in cart flow, address management, and payment gateways.</li>
     </ul>
   </div>
 </section>
+
 
 
   <!-- Skills Section -->
@@ -138,6 +154,7 @@
       </div>
     </div>
   </section>
+
 
   <!-- Projects Section -->
   <section id="projects" class="projects">
@@ -186,4 +203,5 @@
   </div>
 </body>
 </html>
+
 
