--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
 <section id="experience" class="experience">
   <h1 class="experience_section">My <span>Experience</span></h1>
 
-  <!-- Role Experience -->
+ <!-- Experience Section -->
+<section id="experience" class="experience">
+  <h1 class="experience_section">My <span>Experience</span></h1>
+
+  <!-- Job Experience -->
   <div class="experience_card">
     <h3>Software Test Engineer</h3>
     <p><strong>BMS Infosolution Pvt. Ltd – Quality Associate Analyst | Hyderabad, India</strong></p>
@@ -107,7 +111,7 @@
     </ul>
   </div>
 
-  <!-- Project Experience -->
+  <!-- Macy’s Project -->
   <div class="experience_card">
     <h3>Macy’s Checkout Project</h3>
     <p><strong>Role: Software Test Engineer | Domain: E-commerce | Tools: Selenium, TestNG, Maven</strong></p>
@@ -120,6 +124,7 @@
     </ul>
   </div>
 </section>
+
 
 
 
@@ -203,5 +208,6 @@
   </div>
 </body>
 </html>
+
 
 
