--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <!-- Macy’s Project -->
   <div class="experience_card">
     <h3>Macy’s Checkout Project</h3>
-    <p><strong>Role: Software Test Engineer | Domain: E-commerce | Tools: Selenium, TestNG, Maven</strong></p>
+    <p><strong>Role: Software Test Engineer | Domain: E-commerce | Tools: Manual Testing, jira, word, Excel,Agile.</strong></p>
     <ul>
       <li>Worked on the <strong>Macy’s Checkout System</strong>, ensuring smooth and secure online purchases.</li>
       <li>Validated functionalities including login, registration, cart management, payment processing, and order confirmation.</li>
@@ -204,6 +204,7 @@
   </div>
 </body>
 </html>
+
 
 
 
