--- a/index.html
+++ b/index.html
@@ -1,211 +1,329 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio - Podugu Padma Teja</title>
-  <link rel="stylesheet" href="port.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-</head>
-<body>
-  <nav>
-    <input type="checkbox" class="checkbox" id="check">
-    <h1 class="nav_head">PODUGU PADMA TEJA</h1>
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#experience">Experience</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <a href="#contact"><button class="contact_btn">Contact Me</button></a>
-    </ul>
-    <label for="check" class="checkbtn">
-      <i class="fas fa-bars"></i>
-    </label>
-  </nav>
+/* RESET + GLOBALS */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  scroll-behavior: smooth;
+}
+body {
+  background-color: black;
+  color: white;
+}
 
-  <!-- Home Section -->
-  <section id="home" class="home">
-    <img src="nani.jpg" alt="Profile Picture" width="450px" height="400px">
-    <div class="description">
-      <h1>Hello I am<br><span>Podugu Padma Teja</span></h1>
-      <h2>I am a <span>Software Test Engineer....</span></h2>
-      <p>I am a passionate and detail-oriented <strong>Software Test Engineer</strong> with professional experience at <strong>BMS Infosolution Pvt. Ltd</strong> as a Quality Associate Analyst. Skilled in <strong>Manual Testing</strong>, with basic exposure to <strong>Selenium WebDriver</strong>, <strong>Java</strong>, and <strong>TestNG</strong>, I specialize in creating and executing test cases, identifying defects, and ensuring product quality. I am seeking an opportunity to contribute to delivering reliable, high-quality software solutions while enhancing my automation testing skills.</p>
-      <div class="font">
-        <i class="fas fa-phone" id="phone-icon"></i>
-        <i class="fas fa-envelope" id="email-icon"></i>
-        <i class="fab fa-linkedin" id="linkedin-icon"></i>
-        <i class="fab fa-whatsapp" id="whatsapp-icon"></i>
-        <i class="fab fa-github" id="github-icon"></i>
-        <i class="fab fa-instagram" id="instagram-icon"></i>
-        <i class="fab fa-facebook" id="facebook-icon"></i>
-        <i class="fas fa-map-marker-alt" id="location-icon"></i>
-      </div>
-      <button id="download-cv">Download CV</button>
-      <div id="contact-info"></div>
+/* NAVIGATION */
+nav {
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  top: 0;
+  width: 100%;
+  font-size: 20px;
+  padding: 10px;
+  position: fixed;
+  z-index: 1000;
+}
+.nav_head {
+  font-size: 35px;
+}
+nav ul {
+  display: flex;
+  list-style: none;
+}
+nav li a {
+  padding: 15px;
+  color: white;
+}
+nav li a:hover {
+  color: red;
+}
+.contact_btn {
+  padding: 10px 30px;
+  margin-left: 2rem;
+  border-radius: 30px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: .3s;
+  background: white;
+}
+.contact_btn:hover {
+  color: white;
+  border: 2px solid red;
+  background: transparent;
+}
+.checkbtn {
+  font-size: 30px;
+  cursor: pointer;
+  display: none;
+}
+.checkbox {
+  display: none;
+}
 
-      <script>
-        document.getElementById('phone-icon').addEventListener('click', () => {
-          document.getElementById('contact-info').innerText = 'Phone Number: +91 7013544848';
-        });
-        document.getElementById('email-icon').addEventListener('click', () => {
-          document.getElementById('contact-info').innerText = 'Email: padmateja333@email.com';
-        });
-        document.getElementById('linkedin-icon').addEventListener('click', () => {
-          document.getElementById('contact-info').innerText = 'linkedin.com/in/padma-teja-podugu-958476348';
-        });
-        document.getElementById('whatsapp-icon').addEventListener('click', () => {
-          document.getElementById('contact-info').innerText = 'WhatsApp: 7013544848';
-        });
-        document.getElementById('github-icon').addEventListener('click', () => {
-          document.getElementById('contact-info').innerText = 'GitHub: https://github.com/Padmateja3';
-        });
-        document.getElementById('instagram-icon').addEventListener('click', () => {
-          document.getElementById('contact-info').innerText = 'Instagram: _mr._teja_03_';
-        });
-        document.getElementById('facebook-icon').addEventListener('click', () => {
-          document.getElementById('contact-info').innerText = 'Facebook: facebook.com/example';
-        });
-        document.getElementById('location-icon').addEventListener('click', () => {
-          document.getElementById('contact-info').innerText = 'Location: Hyderabad, India';
-        });
-        document.getElementById('download-cv').addEventListener('click', () => {
-          window.location.href = 'https://flowcv.com/resume/7foeihj37dm4';
-        });
-      </script>
-    </div>
-  </section>
+/* HERO (HOME) */
+.home {
+  padding: 200px 100px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 3rem;
+  flex-wrap: wrap;
+}
+.home img {
+  border-radius: 50%;
+  padding: 10px;
+  background: red;
+  box-shadow: 0px 0px 30px red;
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
+}
+.home img:hover {
+  box-shadow: 0px 0px 50px red;
+}
+.description {
+  max-width: 500px;
+}
+.description h1 {
+  font-size: 30px;
+  margin-bottom: 15px;
+}
+.description h1 span {
+  color: red;
+}
+.description h2 {
+  font-size: 28px;
+  margin-bottom: 20px;
+}
+.description h2 span {
+  color: red;
+}
+.description p {
+  font-size: 16px;
+  line-height: 1.6;
+}
+.font i {
+  margin: 15px 8px;
+  border: 2px solid red;
+  border-radius: 50%;
+  padding: 10px;
+  cursor: pointer;
+  transition: .3s;
+}
+.font i:hover {
+  background: red;
+  box-shadow: 0px 0px 15px red;
+}
+.description button {
+  margin-top: 20px;
+  padding: 12px 20px;
+  border-radius: 10px;
+  background: linear-gradient(145deg, red, yellow);
+  cursor: pointer;
+  border: none;
+  font-size: 16px;
+}
 
-  <!-- About Section -->
-  <section id="about" class="about">
-    <div class="about_section">
-      <h1>About<span>Me</span></h1>
-      <h2>Software<span>Test Engineer</span></h2>
-      <p>I am a detail-oriented <strong>Software Test Engineer</strong> with professional experience at <strong>BMS Infosolution Pvt. Ltd</strong> as a Quality Associate Analyst. I have solid expertise in <strong>Manual Testing</strong> and hands-on exposure to <strong>Selenium WebDriver</strong>, <strong>Java</strong>, <strong>TestNG</strong>, and <strong>Maven</strong>. I am experienced in test case design, defect reporting, and executing functional and regression tests. Passionate about delivering high-quality software, I aim to grow my skills in automation testing and contribute effectively to QA processes.</p>
-      <button class="about_btn">Read more....</button>
-    </div>
-    <div class="about_photo">
-      <img src="nani.jpg" alt="Profile" width="420px" height="360px">
-    </div>
-  </section>
+/* ABOUT */
+.about {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 50px;
+  padding: 120px 50px;
+  flex-wrap: wrap;
+}
+.about_section {
+  max-width: 600px;
+}
+.about_section h1 {
+  font-size: 45px;
+}
+.about_section h1 span {
+  color: red;
+}
+.about_section h2 {
+  font-size: 24px;
+  margin: 10px 0;
+}
+.about_section span {
+  color: red;
+}
+.about_section p {
+  line-height: 1.6;
+}
+.about_photo img {
+  border-radius: 50%;
+  background: red;
+  padding: 10px;
+  box-shadow: 0px 0px 30px red;
+  width: 350px;
+  height: 350px;
+  object-fit: cover;
+}
 
- <!-- Experience Section -->
-<section id="experience" class="experience">
-  <h1 class="experience_section">My <span>Experience</span></h1>
+/* EXPERIENCE */
+.experience {
+  padding: 120px 20px;
+  text-align: center;
+  margin-bottom: 100px;
+}
+h1.experience_section {
+  font-size: 45px;
+  margin-bottom: 60px;
+}
+h1.experience_section span {
+  color: red;
+}
+.experience_card {
+  background: #111;
+  padding: 30px;
+  margin: 30px auto;
+  max-width: 900px;
+  border-radius: 12px;
+  box-shadow: 0px 0px 20px rgba(255,0,0,0.3);
+  text-align: left;
+  transition: .3s;
+}
+.experience_card:hover {
+  background: red;
+  color: white;
+  transform: translateY(-10px);
+}
+.experience_card h3 {
+  font-size: 26px;
+  margin-bottom: 10px;
+  color: red;
+}
+.experience_card:hover h3 {
+  color: white;
+}
+.experience_card p, .experience_card ul li {
+  font-size: 16px;
+  line-height: 1.6;
+  margin-bottom: 10px;
+}
 
-  <!-- Job Experience -->
-  <div class="experience_card">
-    <h3>Software Test Engineer</h3>
-    <p><strong>BMS Infosolution Pvt. Ltd – Quality Associate Analyst | Hyderabad, India</strong></p>
-    <ul>
-      <li>Worked as a Software Test Engineer with 1 year of experience in manual and basic automation testing.</li>
-      <li>Designed, executed, and maintained test cases based on functional requirements and business workflows.</li>
-      <li>Performed functional, regression, integration, and cross-browser testing.</li>
-      <li>Experienced with SDLC, STLC, Agile methodology, and defect life cycle.</li>
-      <li>Hands-on with Selenium WebDriver, TestNG, WebDriverWait, and Maven for basic automation.</li>
-    </ul>
-  </div>
+/* PROJECTS & SKILLS */
+.projects, .skills {
+  padding: 120px 20px;
+}
+h1.project_section, h1.skills_section {
+  font-size: 45px;
+  margin-bottom: 50px;
+  text-align: center;
+}
+h1.project_section span, h1.skills_section span {
+  color: red;
+}
+.card {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 20px;
+}
+.project_card, .skills_card {
+  background: #111;
+  padding: 25px;
+  border-radius: 10px;
+  transition: .3s;
+}
+.project_card:hover, .skills_card:hover {
+  background: red;
+  transform: translateY(-10px);
+}
+.project_card h2, .skills_card h2 {
+  margin: 15px 0;
+}
+.project_card i, .skills_card i {
+  font-size: 35px;
+  color: red;
+}
 
-  <!-- Macy’s Project -->
-  <div class="experience_card">
-    <h3>Macy’s Checkout Project</h3>
-    <p><strong>Role: Software Test Engineer | Domain: E-commerce | Tools: Manual Testing, jira, word, Excel,Agile.</strong></p>
-    <ul>
-      <li>Worked on the <strong>Macy’s Checkout System</strong>, ensuring smooth and secure online purchases.</li>
-      <li>Validated functionalities including login, registration, cart management, payment processing, and order confirmation.</li>
-      <li>Prepared and executed comprehensive manual test cases covering multiple checkout scenarios.</li>
-      <li>Automated key test flows using Selenium WebDriver and TestNG to speed up regression testing.</li>
-      <li>Ensured seamless user experience by detecting and reporting bugs in cart flow, address management, and payment gateways.</li>
-    </ul>
-  </div>
-</section>
+/* CONTACT */
+.form {
+  padding: 120px 20px;
+  text-align: center;
+}
+.form h1 {
+  font-size: 40px;
+  margin-bottom: 30px;
+}
+.form h1 span {
+  color: red;
+}
+.form input, .form textarea {
+  width: 90%;
+  max-width: 500px;
+  padding: 12px;
+  margin: 10px 0;
+  background: rgba(77,63,63,0.85);
+  border: none;
+  border-radius: 5px;
+  color: white;
+}
+.form_btn {
+  margin-top: 20px;
+  padding: 12px 30px;
+  background: red;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0px 0px 15px red;
+  cursor: pointer;
+  transition: .3s;
+}
+.form_btn:hover {
+  background: transparent;
+  border: 2px solid red;
+  color: white;
+}
 
+/* FOOTER */
+.footer {
+  background: black;
+  padding: 20px;
+  text-align: center;
+  font-size: 16px;
+}
 
-
-
-  <!-- Skills Section -->
-  <section id="skills" class="skills">
-    <h1 class="skills_section">My<span>Skills</span></h1>
-    <div class="card">
-      <div class="skills_card">
-        <i class="fas fa-laptop"></i>
-        <h2>Programming Languages</h2>
-        <p>Java, Python</p>
-      </div>
-      <div class="skills_card">
-        <i class="fas fa-laptop"></i>
-        <h2>Manual Testing</h2>
-        <p>SDLC & STLC, Test Case Design, Smoke & Sanity Testing, Functional & Regression Testing, Defect Life Cycle, Bug Severity & Priority, Test Summary Reports</p>
-      </div>
-      <div class="skills_card">
-        <i class="fas fa-laptop"></i>
-        <h2>Automation Testing</h2>
-        <p>Basics of Selenium WebDriver with Java, TestNG Framework, WebDriverWait, Maven (Basic)</p>
-      </div>
-      <div class="skills_card">
-        <i class="fas fa-laptop"></i>
-        <h2>Tools & Platforms</h2>
-        <p>Git, GitHub, Eclipse, VS Code</p>
-      </div>
-      <div class="skills_card">
-        <i class="fas fa-laptop"></i>
-        <h2>Soft Skills</h2>
-        <p>Team Collaboration, Creative Thinking, Communication, Problem-Solving, Time Management</p>
-      </div>
-    </div>
-  </section>
-
-
-  <!-- Projects Section -->
-  <section id="projects" class="projects">
-    <h1 class="project_section">My<span>Projects</span></h1>
-    <div class="card">
-      <!-- Project 1 -->
-      <div class="project_card">
-        <i class="fas fa-cash-register"></i>
-        <h2>Macy’s Checkout System</h2>
-        <p><strong>Technologies:</strong> Selenium WebDriver (Basic), TestNG, Jira, Manual Testing</p>
-        <p><strong>Objective:</strong> Tested the complete checkout flow of Macy’s online shopping portal, including cart operations and payment integration.</p>
-        <p><strong>Responsibilities:</strong> Developed manual test cases, validated payment gateway integration, reported defects, and collaborated with developers for fixes.</p>
-        <p><strong>Outcome:</strong> Achieved 100% test coverage and ensured a smooth checkout process for end-users.</p>
-        <p><strong>Explore code: </strong><a href="https://github.com/Padmateja3/Macy-s-Checkout-Project" target="_blank">GitHub Repository</a></p>
-      </div>
-      <!-- Project 2 -->
-      <div class="project_card">
-        <i class="fas fa-shopping-cart"></i>
-        <h2>E-Commerce Website – OpenCart Demo</h2>
-        <p><strong>Technologies:</strong> Selenium WebDriver (Basic), TestNG, Maven, Manual Testing</p>
-        <p><strong>Objective:</strong> To test an OpenCart Demo platform, focusing on functional and regression testing of various modules.</p>
-        <p><strong>Responsibilities:</strong> Designed and executed test cases, performed defect logging and tracking, and prepared test summary reports.</p>
-        <p><strong>Outcome:</strong> Successfully ensured the platform’s checkout flow and major functionalities worked seamlessly.</p>
-        <p><strong>Explore code: </strong><a href="https://github.com/Padmateja3/Ecommerce-Manual-Testing-Project" target="_blank">GitHub Repository</a></p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact" class="contact">
-    <div class="form">
-      <h1>Contact<span>Me</span></h1>
-      <form action="#Home">
-        <input type="text" name="name" placeholder="Enter your name" required=""><br>
-        <input type="email" name="email" placeholder="Enter your email" required=""><br>
-        <input type="number" name="phone" placeholder="Enter your phone No." required=""><br>
-        <textarea name="msg" id="msg" rows="6" cols="20" placeholder="Enter your message"></textarea><br>
-        <button class="form_btn">Submit</button>
-      </form>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <div class="footer">
-    <p><i class="fa-solid fa-copyright"></i> Podugu Padma Teja || All Rights Reserved...</p>
-  </div>
-</body>
-</html>
-
-
-
-
-
+/* RESPONSIVE FIXES */
+@media screen and (max-width: 820px) {
+  nav ul {
+    position: fixed;
+    flex-direction: column;
+    background: black;
+    top: 60px;
+    right: -100%;
+    width: 60%;
+    height: 50vh;
+    padding: 20px;
+    transition: .5s;
+  }
+  .checkbox:checked ~ ul {
+    right: 0;
+  }
+  .checkbtn {
+    display: block;
+  }
+  .home {
+    flex-direction: column;
+    text-align: center;
+    padding: 150px 20px;
+  }
+  .home img {
+    width: 300px;
+    height: 300px;
+  }
+  .about {
+    flex-direction: column;
+    text-align: center;
+  }
+  .about_photo img {
+    width: 250px;
+    height: 250px;
+  }
+  .experience_card {
+    width: 95%;
+  }
+}
