--- a/index.html
+++ b/index.html
@@ -42,20 +42,21 @@
           <h1>Podugu Padma Teja<br />Software Test Engineer</h1>
         </div>
         <p class="section__description">
-             Detail-Oriented Software Test Engineer with 1 year of experience in Manual and Automation Testing of web applications. Proficient in
-            requirement analysis, test case design, test execution, defect tracking, and test summary reporting. Skilled in using Selenium WebDriver with
-            Java and TestNG for automating test scenarios and improving testing efficiency. Demonstrates strong knowledge of SDLC, STLC, and defect life
-            cycle with a proven ability to deliver high-quality, bug-free software solutions
+          Detail-Oriented Software Test Engineer with 1 year of experience in Manual and Automation Testing of web applications. Proficient in
+          requirement analysis, test case design, test execution, defect tracking, and test summary reporting. Skilled in using Selenium WebDriver with
+          Java and TestNG for automating test scenarios and improving testing efficiency. Demonstrates strong knowledge of SDLC, STLC, and defect life
+          cycle with a proven ability to deliver high-quality, bug-free software solutions.
         </p>
         <div class="header__btn">
-          <a href="assets/Teja_ManualTesting_Resume.pdf" target="_blank" class="btn">Download CV</a>
+          <!-- Updated Download Resume Button -->
+          <a href="https://flowcv.com/resume/1bte04fscksw" id="resumeBtn" class="btn">Download Resume</a>
           <a href="#contact" class="btn">Hire Me</a>
         </div>
         <div class="social__icons">
           <a href="https://www.linkedin.com/in/padma-teja-podugu-958476348" target="_blank"><i class="ri-linkedin-fill"></i></a>
           <a href="https://github.com/Padmateja3" target="_blank"><i class="ri-github-fill"></i></a>
           <a href="https://wa.me/917013544848" target="_blank"><i class="ri-whatsapp-fill"></i></a>
-          <a href="mailto:padmateja333@email.com"><i class="ri-mail-fill"></i></a>
+          <a href="mailto:padmmateja1127@gmail.com"><i class="ri-mail-fill"></i></a>
         </div>
       </div>
     </header>
@@ -65,92 +66,85 @@
       <div class="about__content">
         <h2 class="section__header">About Me</h2>
         <p class="section__description">
-        I’m Podugu Padma Teja, a detail-oriented Software Test Engineer with a strong foundation in manual and automation testing. 
-        With hands-on experience in testing web applications, I specialize in designing effective test cases, executing test scenarios, and identifying critical bugs to ensure high-quality software delivery. My approach is rooted in understanding user behavior and business requirements, which helps me uncover issues that truly matter.
-      <br><br>
-      I’m well-versed in SDLC and STLC processes, and I’ve worked with tools like Selenium WebDriver, TestNG, Jira, and GitHub. 
-      I enjoy collaborating with cross-functional teams in Agile environments, contributing to both the technical and strategic aspects of quality assurance. My goal is to make software not just functional, but reliable and user-friendly.
-      <br><br>
-      Beyond testing, I’m passionate about continuous learning and staying updated with the latest trends in QA and automation. Whether it’s refining test strategies or exploring new tools, I’m always eager to grow and help teams deliver better products.
+          I’m Podugu Padma Teja, a detail-oriented Software Test Engineer with a strong foundation in manual and automation testing. 
+          With hands-on experience in testing web applications, I specialize in designing effective test cases, executing test scenarios, and identifying critical bugs to ensure high-quality software delivery. My approach is rooted in understanding user behavior and business requirements, which helps me uncover issues that truly matter.
+          <br><br>
+          I’m well-versed in SDLC and STLC processes, and I’ve worked with tools like Selenium WebDriver, TestNG, Jira, and GitHub. 
+          I enjoy collaborating with cross-functional teams in Agile environments, contributing to both the technical and strategic aspects of quality assurance. My goal is to make software not just functional, but reliable and user-friendly.
+          <br><br>
+          Beyond testing, I’m passionate about continuous learning and staying updated with the latest trends in QA and automation. Whether it’s refining test strategies or exploring new tools, I’m always eager to grow and help teams deliver better products.
         </p>
       </div>
     </section>
 
     <!-- Experience -->
-   <section class="section__container" id="experience">
-  <h2 class="section__header">Experience</h2>
-  <div class="service__grid">
-
-    <!-- Card 1: Role & Responsibilities -->
-    <div class="service__card">
-      <h4>Quality Associate Analyst</h4>
-      <p><b>BMS Infosolution Pvt. Ltd</b> — Hyderabad</p>
-      <p><i><b>Tools & Technologies:</b> Manual Testing, Selenium (Basic), TestNG, JIRA, Agile, MS Excel, MS Word</i></p>
-      <ul>
-        <p>Involved in requirement analysis, test case design & execution.
-            Performed Functional, Regression, Integration, and UAT testing.
-            Defect reporting & tracking using JIRA.
-            Collaborated with developers to ensure timely bug fixes and quality delivery.</p>
-      </ul>
-    </div>
-
-    <!-- Card 2: Projects -->
-    <div class="service__card">
-      <h4>Projects Worked On</h4>
-      <ul>
-        <b>Macy’s Checkout Project</b>
-        <p>Performed web application testing for an E-Commerce Website , ensuring smooth functionality and better user experience.
-         Involved in requirement analysis, test case design & execution, defect reporting, and preparing test summary reports.
-         Proficient in Manual Testing with experience in Functional, Regression, Integration, Smoke, and UAT testing.
-         Collaborated with development teams to identify, analyze, and resolve defects effectively. Good knowledge of SDLC, STLC, defect life cycle,
-         and Agile methodology</p>
-      </ul>
-    </div>
-
-  </div>
-</section>
-
-
+    <section class="section__container" id="experience">
+      <h2 class="section__header">Experience</h2>
+      <div class="service__grid">
+        <!-- Card 1 -->
+        <div class="service__card">
+          <h4>Quality Associate Analyst</h4>
+          <p><b>BMS Infosolution Pvt. Ltd</b> — Hyderabad</p>
+          <p><i><b>Tools & Technologies:</b> Manual Testing, Selenium (Basic), TestNG, JIRA, Agile, MS Excel, MS Word</i></p>
+          <ul>
+            <p>Involved in requirement analysis, test case design & execution.
+              Performed Functional, Regression, Integration, and UAT testing.
+              Defect reporting & tracking using JIRA.
+              Collaborated with developers to ensure timely bug fixes and quality delivery.
+            </p>
+          </ul>
+        </div>
+        <!-- Card 2 -->
+        <div class="service__card">
+          <h4>Projects Worked On</h4>
+          <ul>
+            <b>Macy’s Checkout Project</b>
+            <p>Performed web application testing for an E-Commerce Website, ensuring smooth functionality and better user experience.
+              Involved in requirement analysis, test case design & execution, defect reporting, and preparing test summary reports.
+              Proficient in Manual Testing with experience in Functional, Regression, Integration, Smoke, and UAT testing.
+              Collaborated with development teams to identify, analyze, and resolve defects effectively. Good knowledge of SDLC, STLC, defect life cycle,
+              and Agile methodology.
+            </p>
+          </ul>
+        </div>
+      </div>
+    </section>
 
     <!-- Projects -->
     <section class="section__container portfolio__container" id="projects">
-  <h2 class="section__header">Projects</h2>
-  <div class="portfolio__grid">
-
-
-    <!-- Macy's Checkout Project -->
-    <div class="portfolio__card">
-  <h3>🛒 Macy’s E-Commerce Checkout</h3>
-  <p>
-    <b>Project Overview:</b> Manually tested Macy’s online checkout process from start to finish.<br>
-    <b>Tasks:</b><br>
-    ✅ Tested cart, payment, and order confirmation features<br>
-    🔄 Performed functional and regression testing<br>
-    🐞 Logged bugs in Jira and worked with developers to fix them<br>
-    📋 Documented test cases and results<br>
-    <b>Result:</b> Delivered a smooth, error-free checkout experience that boosted customer satisfaction.
-  </p>
-  <a href="https://github.com/Padmateja3/Macy-s-Checkout-Project" target="_blank" class="btn">View Project</a>
-</div>
-
-
-    <!-- OpenCart Demo Project -->
-    <div class="portfolio__card">
-      <h3>E-Commerce Website – OpenCart Demo</h3>
-    <p>
-    <b>Project Scope</b>: Manually tested OpenCart demo site to check basic shopping and checkout features.<br>
-    <b>Key Responsibilities:</b><br>
-    🛍️ Checked cart functions like adding, updating, and removing products.<br>
-    💳 Tested payment and order confirmation steps.<br>
-    🔁 Did functional and regression testing.<br>
-    🐛 Reported bugs using Jira.<br>
-    📄 Wrote simple test cases and results.<br>
-    <b>Outcome</b>: Helped ensure the site worked smoothly and found issues before release.
-    </p>
-    <a href="https://github.com/Padmateja3/Ecommerce-Manual-Testing-Project" target="_blank" class="btn">View  Project</a>
-    </div>
-  </div>
-</section>
+      <h2 class="section__header">Projects</h2>
+      <div class="portfolio__grid">
+        <!-- Project 1 -->
+        <div class="portfolio__card">
+          <h3>🛒 Macy’s E-Commerce Checkout</h3>
+          <p>
+            <b>Project Overview:</b> Manually tested Macy’s online checkout process from start to finish.<br>
+            <b>Tasks:</b><br>
+            ✅ Tested cart, payment, and order confirmation features<br>
+            🔄 Performed functional and regression testing<br>
+            🐞 Logged bugs in Jira and worked with developers to fix them<br>
+            📋 Documented test cases and results<br>
+            <b>Result:</b> Delivered a smooth, error-free checkout experience that boosted customer satisfaction.
+          </p>
+          <a href="https://github.com/Padmateja3/Macy-s-Checkout-Project" target="_blank" class="btn">View Project</a>
+        </div>
+        <!-- Project 2 -->
+        <div class="portfolio__card">
+          <h3>E-Commerce Website – OpenCart Demo</h3>
+          <p>
+            <b>Project Scope</b>: Manually tested OpenCart demo site to check basic shopping and checkout features.<br>
+            <b>Key Responsibilities:</b><br>
+            🛍️ Checked cart functions like adding, updating, and removing products.<br>
+            💳 Tested payment and order confirmation steps.<br>
+            🔁 Did functional and regression testing.<br>
+            🐛 Reported bugs using Jira.<br>
+            📄 Wrote simple test cases and results.<br>
+            <b>Outcome</b>: Helped ensure the site worked smoothly and found issues before release.
+          </p>
+          <a href="https://github.com/Padmateja3/Ecommerce-Manual-Testing-Project" target="_blank" class="btn">View Project</a>
+        </div>
+      </div>
+    </section>
 
     <!-- Skills -->
     <section class="section__container" id="skills">
@@ -158,29 +152,43 @@
       <div class="service__grid">
         <div class="service__card"><b>Programming languages</b><br>Java, Python.</div>
         <div class="service__card"><b>Manual Testing</b><br>SDLC & STLC, Test Case Design, Smoke & Sanity Testing, Functional & Regression Testing, 
-            <br>Defect Life Cycle, Bug Severity & Priority, Test Summary Reports</div>
-        <div class="service__card"><b>Automation Testing </b><br>Basics of Selenium WebDriver with Java, TestNG Framework, WebDriverWait, Maven</div>
-        <div class="service__card"><b>Tools & Platform </b><br>Jira, Git, GitHub, Eclipse</div>
-        <div class="service__card"><b>Office Tools</b><br>Microsoft Excel, Microsoft word, Power point, Basics of computers.</div>
-        <div class="service__card"><b>Soft Skills </b><br>Team Collaboration, Creative Thinking, Communication, Problem-Solving, Time Management.</div>
+          <br>Defect Life Cycle, Bug Severity & Priority, Test Summary Reports</div>
+        <div class="service__card"><b>Automation Testing</b><br>Basics of Selenium WebDriver with Java, TestNG Framework, WebDriverWait, Maven</div>
+        <div class="service__card"><b>Tools & Platform</b><br>Jira, Git, GitHub, Eclipse</div>
+        <div class="service__card"><b>Office Tools</b><br>Microsoft Excel, Microsoft Word, PowerPoint, Basics of Computers.</div>
+        <div class="service__card"><b>Soft Skills</b><br>Team Collaboration, Creative Thinking, Communication, Problem-Solving, Time Management.</div>
       </div>
     </section>
 
     <!-- Contact -->
     <section class="section__container contact__container" id="contact">
       <h2 class="section__header">Contact Me</h2>
-      <p>Email: <b>padmateja333@email.com</b></p>
+      <p>Email: <b>padmmateja1127@gmail.com</b></p>
       <p>Phone / WhatsApp: <b>+91 7013544848</b></p>
       <p>Location: <b>Hyderabad, India</b></p>
       <div class="contact__socials">
-        <a href="mailto:padmateja333@email.com"><i class="ri-mail-fill"></i></a>
+        <a href="mailto:padmmateja1127@gmail.com"><i class="ri-mail-fill"></i></a>
         <a href="https://wa.me/917013544848" target="_blank"><i class="ri-whatsapp-fill"></i></a>
       </div>
     </section>
 
     <footer class="footer">© 2025 Podugu Padma Teja — All Rights Reserved</footer>
 
+    <!-- Scroll Animations -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="main.js"></script>
+
+    <!-- Force Resume Download -->
+    <script>
+      document.getElementById("resumeBtn").addEventListener("click", function(event) {
+        event.preventDefault();
+        const link = document.createElement("a");
+        link.href = "https://flowcv.com/resume/1bte04fscksw";
+        link.setAttribute("download", "Padma_Teja_Resume.pdf");
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
+      });
+    </script>
   </body>
 </html>
