--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <p>Phone / WhatsApp: <b>+91 7013544848</b></p>
       <p>Location: <b>Hyderabad, India</b></p>
       <div class="contact__socials">
-        <a href="mailto:padmmateja1127@gmail.com"><i class="ri-mail-fill"></i></a>
+        <a href="mailto:padmateja1127@gmail.com"><i class="ri-mail-fill"></i></a>
         <a href="https://wa.me/917013544848" target="_blank"><i class="ri-whatsapp-fill"></i></a>
       </div>
     </section>
@@ -192,3 +192,4 @@
     </script>
   </body>
 </html>
+
