--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <!-- Contact -->
     <section class="section__container contact__container" id="contact">
       <h2 class="section__header">Contact Me</h2>
-      <p>Email: <b>padmmateja1127@gmail.com</b></p>
+      <p>Email: <b>padmateja1127@gmail.com</b></p>
       <p>Phone / WhatsApp: <b>+91 7013544848</b></p>
       <p>Location: <b>Hyderabad, India</b></p>
       <div class="contact__socials">
@@ -192,4 +192,5 @@
     </script>
   </body>
 </html>
+
 
