--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <a href="https://www.linkedin.com/in/padma-teja-podugu-958476348" target="_blank"><i class="ri-linkedin-fill"></i></a>
           <a href="https://github.com/Padmateja3" target="_blank"><i class="ri-github-fill"></i></a>
           <a href="https://wa.me/917013544848" target="_blank"><i class="ri-whatsapp-fill"></i></a>
-          <a href="mailto:padmmateja1127@gmail.com"><i class="ri-mail-fill"></i></a>
+          <a href="mailto:padmateja1127@gmail.com"><i class="ri-mail-fill"></i></a>
         </div>
       </div>
     </header>
@@ -192,5 +192,6 @@
     </script>
   </body>
 </html>
+
 
 
